--- a/nemiumC.html
+++ b/nemiumC.html
@@ -73,7 +73,7 @@
 
 
                         <h2>Setup</h2>
-                        <img src="/icons/Google Chrome.png" alt="Google Chrome" />
+                        <img src="./icons/Google Chrome.png" alt="Google Chrome" />
 
                         <h3>1. Google Chrome</h3>
                         <p>
@@ -84,7 +84,7 @@
                             soporte de nuevos estándares y herramientas de desarrollo avanzadas y de
                             amigable uso.
                         </p>
-                        <img src="/icons/Visual Studio Code.png" alt="logo visual estudio code" />
+                        <img src="./icons/Visual Studio Code.png" alt="logo visual estudio code" />
                         <h3>2. Visual Studio Code</h3>
                         <p>
                             Visual Studio Code es el <span style="font-style: italic; font-weight: 700;">editor de texto
@@ -95,7 +95,7 @@
                             de plugins lo hace el complemento perfecto para cualquier programador
                             sin importar el lenguaje en el que se desemvuelva.
                         </p>
-                        <img src="/icons/Figma.png" alt="logo figma" />
+                        <img src="./icons/Figma.png" alt="logo figma" />
                         <h3>3. Figma</h3>
                         <p>
                             Figma es una la herramienta más popular en la actualidad para entregar
@@ -103,7 +103,7 @@
                                 style="font-style: italic; font-weight: 700;">fácil uso</span>
                             porque puede ser usado directamente desde el navegador.
                         </p>
-                        <img src="/icons/GitHub.png" alt="logo github code" />
+                        <img src="./icons/GitHub.png" alt="logo github code" />
                         <h3>4. GitHub</h3>
                         <p>
                             Así como en Facebook <span style="font-style: italic; font-weight: 700;">te encuentran tus
@@ -166,7 +166,7 @@
                             podemos identificar dependencias, herencias en css y que tan complejo es
                             nuestro proyecto.
                         </p>
-                        <img src="/img/dom.png" alt="" />
+                        <img src="./img/dom.png" alt="" />
                         <h3>4. Semántica</h3>
                         <p>
                             La semántica le brinda sentido a cada elemento existen en un sitio web,
@@ -192,7 +192,7 @@
                             el lenguaje de estilos utilizado para describir la presentación de
                             documentos HTML
                         </p>
-                        <img src="/img/image 5.png" alt="" />
+                        <img src="./img/image 5.png" alt="" />
                         <h2>Modelo de caja</h2>
                         <h3>El modelo de caja está compuesto por:</h3>
                         <p>
